# Linux_Malloc

Malloc/: CMakeLists.txt  main.c
Malloc/include/: AllocateMemory.h  Malloc.h
Malloc/src/: AllocateMemory.c  Malloc.c
Malloc2/: .gitignore  CMakeLists.txt  Makefile
Malloc2/include/: AuxFunctions.h  BlockManipulation.h  BlockVariable.h  Calloc.h  Free.h  HeapManipulation.h  Malloc.h  MemoryManagement.h  MemsetAlign.h  Realloc.h
Malloc2/src/: AuxFunctions.c  BlockManipulation.c  BlockVariable.c  Calloc.c  Free.c  HeapManipulation.c  Malloc.c  MemsetAlign.c  Realloc.c  main.c
